--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "SEE LICENSE IN <your-license-filename>",
     "repository": "<fill-your-repository-here>",
     "dependencies": {
+        "moment": "^2.23.0",
         "nativescript-theme-core": "~1.0.4",
         "nativescript-ui-gauge": "3.7.1",
         "nativescript-ui-listview": "5.0.1",
