--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "nativescript-theme-core": "~1.0.4",
         "nativescript-ui-gauge": "3.7.1",
         "nativescript-ui-listview": "5.0.1",
+        "nativescript-ui-sidedrawer": "^5.0.1",
         "nativescript-vue": "~2.0.0",
         "tns-core-modules": "~5.1.0"
     },
