--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "repository": "<fill-your-repository-here>",
     "dependencies": {
         "moment": "^2.23.0",
+        "nativescript-iqkeyboardmanager": "^1.3.0",
+        "nativescript-orientation": "^2.2.1",
         "nativescript-theme-core": "~1.0.4",
         "nativescript-ui-gauge": "3.7.1",
         "nativescript-ui-listview": "5.0.1",
         "nativescript-ui-sidedrawer": "^5.0.1",
         "nativescript-vue": "~2.0.0",
+        "nativescript-windowed-modal": "^5.0.2",
         "tns-core-modules": "~5.1.0"
     },
     "devDependencies": {
